--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,14 @@
         android:theme="@style/Theme.SpaceManiacs"
         tools:targetApi="31">
         <activity
+            android:name=".LaunchesPage"
+            android:exported="false" />
+        <activity
+            android:name=".LaunchesActivity"
+            android:exported="false"
+            android:label="@string/title_activity_launches"
+            android:theme="@style/Theme.SpaceManiacs" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -21,7 +29,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".EventsLandingPage"></activity>
+        <activity android:name=".EventsLandingPage" />
     </application>
 
 </manifest>
