changed nav bar theme to improve visibility, added code to fetch for launches, astronauts, and events

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/astronaut_icon"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SpaceManiacs"
+        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
         tools:targetApi="31">
         <activity
             android:name=".RandomAstronautGenerator"
