--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".EventsResult" />
         <activity android:name=".EventsLandingPage" />
         <service android:name=".FetchWrite"/>
     </application>
