--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".EventsResult" />
+        <activity android:name="EventDetail" />
         <activity android:name=".EventsLandingPage" />
         <service android:name=".FetchWrite"/>
     </application>
